changed the html structure

--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test | WalkingBrain</title>
+    <title>Home | GemJam</title>
     <link rel="stylesheet" href="styles.css">
+    <header><h2>Welcome to GemJam</h2></header>
 </head>
+
 <html>
-  <body>
-    <h1>what's up, bitches?</h1>
-    <!-- The form submits data to /submit on the server using POST -->
-    <form action="/submit" method="post">
-      Your name: <input type="text" name="username" required>
-      <button type="submit">Send</button>
-    </form>
-  </body>
+    <h3>Sign up or Log in and take quiz to find out wich rock-group are you in! <button type="/Login">Log in</button> <button type="/Signup">Sign up</button></h3>
+    <p>or continue as <button>guest</button></p>
 </html>
+
