--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in | GemJam</title>
+    <title>Sign up | GemJam</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <html>
@@ -10,9 +10,10 @@
     <h1></h1>
     <!-- The form submits data to /submit on the server using POST -->
     <form action="/submit" method="post">
-      Username: <input type="text" name="username" required><br>
-      Password: <input type="text" name="password" required><br>
-      <button type="submit">Log in</button>
+        Username: <input type="text" name="create_username" required><br>
+        Password: <input type="text" name="create_password" required><br>
+        Password agin: <input type="text" name="create_password_agin" required><br>
+      <button type="submit">Create account</button>
     </form>
   </body>
 </html>
