--- a/signup.html
+++ b/signup.html
@@ -15,5 +15,8 @@
         Password agin: <input type="text" name="create_password_agin" required><br>
       <button type="submit">Create account</button>
     </form>
+  <form action="loginpage" method="post">
+    <p>Do you have an account? <button type="submit" name="login">Log in</button></p>
+  </form>
   </body>
 </html>
