--- a/login.html
+++ b/login.html
@@ -14,8 +14,8 @@
       Password: <input type="text" name="password" required><br>
       <button type="submit">Log in</button>
     </form>
-    <form action="/signup" method="post">
-      or <button type= "submit" name="signup">create account</button>
+    <form action="/signuppage" method="post">
+      or <button type="submit" name="signup">create account</button>
     </form>
   </body>
 </html>
