Made the buttons functional

--- a/login.html
+++ b/login.html
@@ -14,8 +14,7 @@
       Password: <input type="text" name="password" required><br>
       <button type="submit">Log in</button>
     </form>
-    <form action="/signuppage" method="post">
-      or <button type="submit" name="signup">create account</button>
-    </form>
+    <p>Don't have an account?
+    <a href="signup.html"><button type="submit" name="signup">Sign up</button></a>
   </body>
 </html>
