--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <html>
-    <h3>Sign up or Log in and take quiz to find out wich rock-group are you in! <button type="submit" name="login">Log in</button>
-        <button type="submit" name="signup">Sign up</button></h3>
+    <h3>Sign up or Log in and take quiz to find out which rock-group are you in!
+        <a href="login.html"><button type="submit" name="login">Log in</button></a>
+        <a href="signup.html"><button type="submit" name="signup">Sign up</button></h3></a>
     <p>or continue as <button type="submit" name="guest">guest</button></p>
 </html>
 
