--- a/signup.html
+++ b/signup.html
@@ -12,11 +12,10 @@
     <form action="/submit" method="post">
         Username: <input type="text" name="create_username" required><br>
         Password: <input type="text" name="create_password" required><br>
-        Password agin: <input type="text" name="create_password_agin" required><br>
+        Password again: <input type="text" name="create_password_again" required><br>
       <button type="submit">Create account</button>
     </form>
-  <form action="loginpage" method="post">
-    <p>Do you have an account? <button type="submit" name="login">Log in</button></p>
-  </form>
+    <p>Already have an account?
+    <a href="login.html"><button type="submit" name="signup">Log in</button></a>
   </body>
 </html>
