--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <!-- The form submits data to /submit on the server using POST -->
     <form action="/login" method="post">
       Username: <input type="text" name="username" required><br>
-      Password: <input type="text" name="password" required><br>
+      Password: <input type="password" name="password" required><br>
       <button type="submit">Log in</button>
     </form>
     <p>Don't have an account?
