Added home buttons

--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
       <button type="submit">Log in</button>
     </form>
     <p>Don't have an account?
-    <a href="signup.html"><button type="submit" name="signup">Sign up</button></a>
+    <a href="signup.html"><button type="submit" name="signup">Sign up</button><br></a>
+    <a href="index.html"><button type="submit" name="home">Home</button></a>
   </body>
 </html>
