--- a/signup.html
+++ b/signup.html
@@ -16,6 +16,7 @@
       <button type="submit">Create account</button>
     </form>
     <p>Already have an account?
-    <a href="login.html"><button type="submit" name="signup">Log in</button></a>
+    <a href="login.html"><button type="submit" name="signup">Log in</button><br></a>
+    <a href="index.html"><button type="submit" name="home">Home</button></a>
   </body>
 </html>
