--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | GemJam</title>
+    <title> Home | GemJam</title>
+    <link rel="icon" href="images/logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
-    <header><h2>Welcome to GemJam</h2></header>
 </head>
 
-<html>
+    <h2>Welcome to GemJam</h2>
     <h3>Sign up or Log in and take quiz to find out which rock-group are you in!
         <a href="login.html"><button type="submit" name="login">Log in</button></a>
         <a href="signup.html"><button type="submit" name="signup">Sign up</button></h3></a>
