--- a/signup.html
+++ b/signup.html
@@ -13,11 +13,21 @@
     <form action="/signup" method="post">
         Username: <input type="text" name="username" required><br>
         Password: <input type="password" name="password" required><br>
+        <!-- password suggestion rules -->
+        <ul id="rules">
+          <li id="len">At least 8 characters</li>
+          <li id="num">At least 1 number</li>
+          <li id="cap">At least 1 uppercase letter</li>
+        </ul>
         Password again: <input type="password" name="password_again" required><br>
       <button type="submit">Create account</button>
     </form>
     <p>Already have an account?
     <a href="login.html"><button type="submit" name="signup">Log in</button><br></a>
     <a href="index.html"><button type="submit" name="home">Home</button></a>
+    </p>
   </body>
+
+  <script src="password_suggestion.js"></script>
+
 </html>
