Soo... Stone select page, home page and images

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in | GemJam</title>
-    <link rel="icon" href="images/logo.svg" type="image/svg+xml">
+    <link rel="icon" href="images/logo2.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
 </head>
 <html>
@@ -17,6 +17,6 @@
     </form>
     <p>Don't have an account?
     <a href="signup.html"><button type="submit" name="signup">Sign up</button><br></a>
-    <a href="index.html"><button type="submit" name="home">Home</button></a>
+    <a href="index.html"><button type="submit" name="back">Back</button></a>
   </body>
 </html>
