--- a/signup.html
+++ b/signup.html
@@ -3,15 +3,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up | GemJam</title>
-    <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+    <link rel="icon" href="/images/logo2.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
 </head>
 <html>
   <body>
-    <h1></h1>
+    <h2>So you are new to GemJam</h2>
+    <h3>Lets start with creating your account</h3>
     <!-- The form submits data to /signup on the server using POST -->
     <div class="password-container">
     <form action="/signup" method="post">
+        Email: <input type="email" name="Email_adress" required><br>
         Username: <input type="text" name="username" required><br>
         Password: <input type="password" name="password" required><br>
         <!-- password suggestion rules -->
@@ -26,7 +28,7 @@
     </div>
     <p>Already have an account?
     <a href="login.html"><button type="submit" name="signup">Log in</button><br></a>
-    <a href="index.html"><button type="submit" name="home">Home</button></a>
+    <a href="index.html"><button type="submit" name="back">Back</button></a>
     </p>
   
     <script src="password_suggestion.js"></script>
