--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home | GemJam</title>
-    <link rel="icon" href="images/logo.svg" type="image/svg+xml">
+    <title>Welcome | GemJam</title>
+    <link rel="icon" href="images/logo2.svg  " type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
 </head>
 
