Better homepage and basic cookies Cookies ain't doing much yet, but at least they are there. next commit will have more db interactions (home and stones pages)

--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
     <!-- The form submits data to /signup on the server using POST -->
     <div class="password-container">
     <form action="/signup" method="post">
-        Email: <input type="email" name="Email_adress" required><br>
+        Email: <input type="email" name="Email_address" required><br>
         Username: <input type="text" name="username" required><br>
         Password: <input type="password" name="password" required><br>
         <!-- password suggestion rules -->
