--- a/home.html
+++ b/home.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Stone</title>
+  <title>Your Stone | GemJam</title>
+  <link rel="icon" href="images/logo.svg  " type="image/svg+xml">
   <link rel="stylesheet" href="styles.css">
   <style>
     #images img {
@@ -13,11 +15,13 @@
     }
   </style>
 </head>
+
 <body>
   <h1 id="title"></h1>
   <div id="images">
-  <script src="homepage.js"></script>
+    <script src="homepage.js"></script>
   </div>
   <div id="stone_selection"></div>
 </body>
+
 </html>
