--- a/signup.html
+++ b/signup.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up | GemJam</title>
-    <link rel="icon" href="/images/logo2.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign up | GemJam</title>
+  <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <html>
-  <body>
-    <h2>So you are new to GemJam</h2>
-    <h3>Lets start with creating your account</h3>
-    <!-- The form submits data to /signup on the server using POST -->
-    <div class="password-container">
+
+<body>
+  <h2>So you are new to GemJam</h2>
+  <h3>Lets start with creating your account</h3>
+  <!-- The form submits data to /signup on the server using POST -->
+  <div class="password-container">
     <form action="/signup" method="post">
-        Email: <input type="email" name="Email_address" required><br>
-        Username: <input type="text" name="username" required><br>
-        Password: <input type="password" name="password" required><br>
-        <!-- password suggestion rules -->
-        <ul id="rules">
-          <li id="len">At least 8 characters</li>
-          <li id="num">At least 1 number</li>
-          <li id="cap">At least 1 uppercase letter</li>
-        </ul>
-        Password again: <input type="password" name="password_again" required><br>
+      Email: <input type="email" name="Email_address" required><br>
+      Username: <input type="text" name="username" required><br>
+      Password: <input type="password" name="password" required><br>
+      <!-- password suggestion rules -->
+      <ul id="rules">
+        <li id="len">At least 8 characters</li>
+        <li id="num">At least 1 number</li>
+        <li id="cap">At least 1 uppercase letter</li>
+      </ul>
+      Password again: <input type="password" name="password_again" required><br>
       <button type="submit">Create account</button>
     </form>
-    </div>
-    <p>Already have an account?
+  </div>
+  <p>Already have an account?
     <a href="login.html"><button type="submit" name="signup">Log in</button><br></a>
     <a href="index.html"><button type="submit" name="back">Back</button></a>
-    </p>
-  
-    <script src="password_suggestion.js"></script>
+  </p>
+
+  <script src="password_suggestion.js"></script>
 
 </html>
