--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <h2>Welcome to GemJam</h2>
 <h3>Sign up or Log in and take quiz to find out which rock-group are you in!
-  <a href="login.html"><button type="submit" name="login">Log in</button></a>
-  <a href="signup.html"><button type="submit" name="signup">Sign up</button>
-</h3></a>
-<p>or continue as <button type="submit" name="guest">guest</button></p>
+  <form action="/check-login" method="post"><button type="submit">Log in</button></form>
+  <form action="/check-signup" method="post"><button type="submit">Sign up</button></form>
+</h3>
+<form action ="/guest" method="post"><button type="submit">Continue as Guest</button></form>
+<form action="/logout" method="post"><button type="submit">Log out</button></form>
 
 </html>
