Made setup for rock group retrieval

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <form action="/check-login" method="post"><button type="submit">Log in</button></form>
   <form action="/check-signup" method="post"><button type="submit">Sign up</button></form>
 </h3>
-<form action ="/guest" method="post"><button type="submit">Continue as Guest</button></form>
+<form action ="/api/stone" method="post"><button type="submit">Continue as Guest</button></form>
+<form action="/home" method="post"><button type="submit">Homepage</button></form>
 <form action="/logout" method="post"><button type="submit">Log out</button></form>
 
 </html>
